src/test/ui/type/type-check/issue-40294.stderr
error[E0283]: type annotations needed
  --> $DIR/issue-40294.rs:6:19
   |
LL |     where &'a T : Foo,
   |                   ^^^ cannot infer type for reference `&'a T`
   |
   = note: cannot satisfy `&'a T: Foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0283`.
